--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Mitologic, sueños hechos realidad</title>
-    <link rel="stylesheet" href="../Assets/css/estilos.css">
+<link rel="stylesheet" href="../Assets/css/estilos.css">
+
+
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-  </head>
+    </head>
   <body>
 
 <!-- HEADER -->
@@ -33,24 +35,33 @@
       <main id="main">
 
         <section id="hola">
-<h1 class="titulo">Mitologic te da la bienvenida</h1>
+<img src="..//Assets/imagenes/banner.jpg" alt="">
         </section>
 
+
+
+
+
+
+
+
         <section class="somos">
-<h3 class="titulo">¿Quiénes somos?</h2>
+<h2 class="titulo">¿Quiénes somos?
+
+</h2>
   <p>Somos un grupo anónimo de personas que ofrece la realización de los sueños de varias personas.
     Estamos a lo largo de varias ciudades imporantes del mundo. Pero decidimos atender en San Salvador
     de Jujuy donde encontramos los diversos climas necesarios para conservar nuestros productos.</p>
         </section>
 
 <section class="ofrecemos">
-<h3 class="titulo">¿Qué ofrecemos?</h2>
+<h2 class="titulo">¿Qué ofrecemos?</h2>
   <p>Cumplir sueños. Para niños, niñas, adolescentes y adultos tenemos la fantasía hecha realidad.
     Ofrecemos un gran catálogo de animales mitólogicos que ustedes pueden llevarse a vivir a su jardín,
-    campo o donde lo deseen. <br> <br></p> <p id="fin__o">Aquí algunos del catálogo </p>
+    campo o donde lo deseen. <br> <br></p> <p id="fin__o"> Catálogo </p>
 
     <div class="catalogo">
-<h4 class="nombre">Dragón</h4>
+<h3 class="nombre">Dragón</h3>
           <img src="..//Assets/imagenes/dragon.jpeg" alt="">
           <p>Son reptiles alados y los seres mitológicos más poderosos que existen o de los que se haya hablado
             jamás. Están presentes en las leyendas de Asia, Europa, América y Oceanía, y unas de sus principales características es que escupen fuego y pueden volar.
@@ -59,7 +70,7 @@ Recomendado para personas que viven en zonas rurales.</p>
     </div>
 
 <div class="catalogo">
-<h4 class="nombre">Fauno</h4>
+<h3 class="nombre">Fauno</h3>
     <img src="..//Assets/imagenes/fauno.jpeg" alt="">
     <p>El Fauno es personificado como un hombre con largos cuernos, sus piernas son de cabra y en vez de tener pies,
       posee pesuñas. <br>En la mitología romana se encontraba en los bosques y campos, su cometido en la tierra era
@@ -71,7 +82,7 @@ Recomendado para personas que gustan de largas charlas y la adivinación.</p>
 </div>
 
     <div class="catalogo">
-<h4 class="nombre">Basilisco</h4>
+<h3 class="nombre">Basilisco</h3>
   <img src="..//Assets/imagenes/basilico.jpg" alt="">
   <p>Basilisco
 El basilisco común, es un animal mitológico híbrido, cuya apariencia es más similar a la de un gallo, un reptil y murciélago.
@@ -85,7 +96,7 @@ pública.</p>
 
     </div>
 <div class="catalogo">
-<h4 class="nombre">Cerbero</h4>
+<h3 class="nombre">Cerbero</h3>
     <img src="..//Assets/imagenes/cerbero.jpeg" alt="">
     <p>
 Cerbero era el perro guardián de Hades, el Dios del inframundo, que resguardaba el lugar, estando en las afueras
@@ -102,7 +113,7 @@ Recomendado para quien gusta de compañias profundas y transformadoras.</p>
 
 
 <section class="experiencia">
-<h3 class="titulo">Experiencias de nuestros clientes</h2>
+<h2 class="titulo">Experiencias</h2>
   <p>"Vivir con un Pegaso me permitió conocer lugares impensados lejos de este mundo. Gracias Mitologic
     por dejarme vivir esta experiencia única." <br>
 Mabel 41 años de Coro, Venezuela <br> <br>
@@ -117,7 +128,7 @@ Samantha 58 años de Puerto Varas, Chile. <br><br>
 </section>
 
 <section class="contacto">
-  <h4 class="titulo">Contacto</h3>
+  <h2 class="titulo">Contacto</h2>
     <p>Recibimos consulta únicamente por correo mitologicrealidad@mitologic.com <br>
 El catálogo de animales mitológicos se actualiza constantemente, pueden suscribirse a un mailing mensual de
 novedades, enviando un correo con asunto "Quiero Más".<br>
@@ -130,7 +141,7 @@ San Salvador de Jujuy, Argentina.</p>
 
       <!-- FOOTER -->
       <footer id="footer">
-<p class="text-warning">Aqui los derechos son sólo de mitologic</p>
+<p class="text">Aqui los derechos son sólo de mitologic</p>
       </footer>
 
 
