--- a/Assets/css/estilos.css
+++ b/Assets/css/estilos.css
@@ -1,5 +1,4 @@
 
-
 *{
   box-sizing: border-box;
 }
@@ -7,11 +6,12 @@
 body{
   margin: 0;
   padding: 0;
+
 }
 
-img{
-  height: 100%;
-  width: 100%;
+img {
+  height: 80%;
+  width: 80%;
 }
 
 
@@ -23,57 +23,65 @@ header{
   background-color: #ffe292;
   display: flex;
   flex-wrap: wrap;
-  justify-content:center;
+  justify-content: flex-start;
+
+
 }
 
 #header{
   height: 10%;
   width: auto;
+
   }
 
 .logo__contenedor{
-  width: 20%;
+  width: 30%;
   height: 100%;
   display: block;
   padding: 2%;
+
 }
 
 header nav{
-  width: 100%;
+  width: 70%;
   height: auto;
-  background-color:  #d1f2eb;
+background-color: #ffe292;
 display: flex;
-justify-content: center;
-align-items: center;
-align-content: center;
+flex-wrap: wrap;
 margin: 0;
 }
 
 header nav ul{
   width: auto;
-  height: 10%;
+  height: 20%;
   display: flex;
-  flex-direction: row;
+justify-content: space-between;
   padding: 0;
+  flex-wrap: wrap;
+
 
   }
 
 .item{
-width: 80%;
-height: 30%;
+width: 100%;
+height: 100%;
 display: flex;
-align-items: center;
-color:  #28b463;
+color: black;
 padding: 0;
+flex-wrap: wrap;
+justify-content: center;
+
 }
 
+
 .item a{
-  width: 80%;
-  height: 30%;
+  width: 100%;
+  height: 100%;
 padding-left: 7vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
+
+
+
 }
 
 /*MAIN*/
@@ -82,13 +90,17 @@ main{
 display: flex;
 flex-wrap: wrap;
 justify-content: center;
-background-color:  #922b21;
+background-color:  #eaecee;
+color: black;
 }
 
 #main {
   width: auto;
   height: 80%;
+
 }
+
+
 
 main section{
 height: 30%;
@@ -97,49 +109,77 @@ width: 70%;
 }
 
 .nombre{
-  text-decoration: underline;
+  font-weight: 600;
   text-align: center;
   font-style: italic;
-  color:  #f5cba7;
+  color:   #f1948a ;
 }
 
 #hola{
-  font-size: 90%;
+  text-align: center;
+  width: 50%;
+  height: 50%;
+}
+
+h2{
+  font-size: 100%;
+  text-align: center;
+  background-color: #ffe292;
+  padding: 2%;
+  margin-bottom: 4%;
+
+
+}
+
+div{
   text-align: center;
 }
 
 h3{
-  font-size: 90%;
+  font-size: 50%;
+  text-align: center;
+
+}
+
+p{
+  font-size: 75%;
   text-align: center;
 }
 
 
 #fin__o{
-  font-stretch: extra-expanded;
+  font-size: 75%;
+  font-weight: bold;
   text-align: center;
+  background-color: #ffe292;
+  padding: 2%;
+  margin-bottom: 3%;
+
 }
 /*FOOTER*/
 
 #footer {
   width: auto;
   height: 10%;
+
 }
 footer{
 height: 12vh;
   background-color: #ffe292;
-  border: 3px solid;
-border-color: black;
+
 }
 
 footer p{
   font-size: 130%;
     display: flex;
   justify-content: center;
-  color: #922b21;
-  
+  }
 
+.text{
+  color: black;
+  font-weight: bold;
+  font-size: 60%;
 }
-
 .invisible{
   display: none;
 }
