--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,21 +14,25 @@
   <body>
 
 <!-- HEADER -->
-<header id="header">
+<header>
+<div class="div__header">
 
   <a class="logo__contenedor" href="#">
   <img src="..//Assets/imagenes/logo.png" alt="Logo">
 </a>
-
+</div>
   <nav>
 
+<div class="list__container">
     <ul>
-      <li class="item"><a href="#"></a> ¿Quiénes somos?</li>
-      <li class="item"><a href="#"></a> ¿Qué ofrecemos?</li>
-      <li class="item"><a href="#"></a> Experiencias</li>
-      <li class="item"><a href="#"></a> Contacto</li>
+            <li class="item"><a href="#ofrece"> Servicios</a></li>
+            <li class="item"><a href="#fin__o"> Catálogo</a></li>
+      <li class="item"><a href="#expe"> Experiencias</a></li>
+      <li class="item"><a href="#contacto">Contacto</a></li>
     </ul>
   </nav>
+</div>
+
 
   </header>
       <!-- MAIN -->
@@ -39,28 +43,24 @@
         </section>
 
 
+        <section>
+<h2 class="titulo" id="quienes">¿Quiénes somos? </h2>
 
-
-
-
-
-
-        <section class="somos">
-<h2 class="titulo">¿Quiénes somos?
-
-</h2>
   <p>Somos un grupo anónimo de personas que ofrece la realización de los sueños de varias personas.
     Estamos a lo largo de varias ciudades imporantes del mundo. Pero decidimos atender en San Salvador
     de Jujuy donde encontramos los diversos climas necesarios para conservar nuestros productos.</p>
         </section>
 
-<section class="ofrecemos">
-<h2 class="titulo">¿Qué ofrecemos?</h2>
-  <p>Cumplir sueños. Para niños, niñas, adolescentes y adultos tenemos la fantasía hecha realidad.
-    Ofrecemos un gran catálogo de animales mitólogicos que ustedes pueden llevarse a vivir a su jardín,
-    campo o donde lo deseen. <br> <br></p> <p id="fin__o"> Catálogo </p>
+<section>
+<h2 class="titulo" id="ofrece">Servicios</h2>
+  <p>Nos dedicamos a cumplir sueños. Para niños, niñas, adolescentes y adultos ofrecemos la fantasía hecha realidad.
+    Con un gran catálogo de animales mitólogicos que pueden llevarse a vivir a su jardín,
+    campo o donde deseen. <br> <br></p>
+</section>
 
-    <div class="catalogo">
+<section>
+  <h2 id="fin__o"> Catálogo </h2>
+    <div>
 <h3 class="nombre">Dragón</h3>
           <img src="..//Assets/imagenes/dragon.jpeg" alt="">
           <p>Son reptiles alados y los seres mitológicos más poderosos que existen o de los que se haya hablado
@@ -69,7 +69,7 @@ Son grandes compañeros de paseos de días enteros. <br>
 Recomendado para personas que viven en zonas rurales.</p>
     </div>
 
-<div class="catalogo">
+<div >
 <h3 class="nombre">Fauno</h3>
     <img src="..//Assets/imagenes/fauno.jpeg" alt="">
     <p>El Fauno es personificado como un hombre con largos cuernos, sus piernas son de cabra y en vez de tener pies,
@@ -81,7 +81,7 @@ Recomendado para personas que gustan de largas charlas y la adivinación.</p>
 
 </div>
 
-    <div class="catalogo">
+    <div >
 <h3 class="nombre">Basilisco</h3>
   <img src="..//Assets/imagenes/basilico.jpg" alt="">
   <p>Basilisco
@@ -95,7 +95,7 @@ Recomendado para gente que tiene enemigos o no le gusta la compañia. No dejar e
 pública.</p>
 
     </div>
-<div class="catalogo">
+<div >
 <h3 class="nombre">Cerbero</h3>
     <img src="..//Assets/imagenes/cerbero.jpeg" alt="">
     <p>
@@ -112,8 +112,8 @@ Recomendado para quien gusta de compañias profundas y transformadoras.</p>
 </section>
 
 
-<section class="experiencia">
-<h2 class="titulo">Experiencias</h2>
+<section>
+<h2 class="titulo" id="expe">Experiencias</h2>
   <p>"Vivir con un Pegaso me permitió conocer lugares impensados lejos de este mundo. Gracias Mitologic
     por dejarme vivir esta experiencia única." <br>
 Mabel 41 años de Coro, Venezuela <br> <br>
@@ -127,19 +127,23 @@ Samantha 58 años de Puerto Varas, Chile. <br><br>
 </p>
 </section>
 
-<section class="contacto">
-  <h2 class="titulo">Contacto</h2>
+<section>
+  <h2 class="titulo" id="contacto">Contacto</h2>
     <p>Recibimos consulta únicamente por correo mitologicrealidad@mitologic.com <br>
 El catálogo de animales mitológicos se actualiza constantemente, pueden suscribirse a un mailing mensual de
 novedades, enviando un correo con asunto "Quiero Más".<br>
 San Salvador de Jujuy, Argentina.</p>
 
-<p class="invisible">Puden consultar el catálogo del 2020 <a href="../Assets/imagenes/catalogo.pdf" target="_blank">aquí</a> </p>
+</section>
 
+<section>
+  <p class="invisible">Puden consultar el catálogo del 2020 <a href="../Assets/imagenes/catalogo.pdf" target="_blank">aquí</a> </p>
 </section>
       </main>
 
       <!-- FOOTER -->
+
+
       <footer id="footer">
 <p class="text">Aqui los derechos son sólo de mitologic</p>
       </footer>
