--- a/Assets/css/estilos.css
+++ b/Assets/css/estilos.css
@@ -6,7 +6,6 @@
 body{
   margin: 0;
   padding: 0;
-
 }
 
 img {
@@ -14,32 +13,28 @@ img {
   width: 80%;
 }
 
-
 /* HEADER */
 
 header{
-  height: 8vh;
+  height: 10%;
   width: auto;
   background-color: #ffe292;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-
-
 }
 
-#header{
-  height: 10%;
-  width: auto;
-
+a:hover{
+  color: black;
+  text-transform: full-width;
   }
 
-.logo__contenedor{
+
+.div__header{
   width: 30%;
   height: 100%;
   display: block;
   padding: 2%;
-
 }
 
 header nav{
@@ -48,18 +43,16 @@ header nav{
 background-color: #ffe292;
 display: flex;
 flex-wrap: wrap;
-margin: 0;
+padding: 25px;
 }
 
 header nav ul{
   width: auto;
   height: 20%;
   display: flex;
-justify-content: space-between;
+justify-content: center;
   padding: 0;
   flex-wrap: wrap;
-
-
   }
 
 .item{
@@ -67,25 +60,22 @@ width: 100%;
 height: 100%;
 display: flex;
 color: black;
-padding: 0;
 flex-wrap: wrap;
-justify-content: center;
-
+padding: 3px;
 }
-
 
 .item a{
   width: 100%;
   height: 100%;
-padding-left: 7vh;
   display: flex;
-
-
-
+flex-wrap: wrap;
+text-decoration: none;
+color: black;
 }
 
-/*MAIN*/
 
+
+/*MAIN*/
 main{
 display: flex;
 flex-wrap: wrap;
@@ -97,22 +87,18 @@ color: black;
 #main {
   width: auto;
   height: 80%;
-
 }
-
-
 
 main section{
 height: 30%;
 width: 70%;
-
 }
 
 .nombre{
-  font-weight: 600;
   text-align: center;
   font-style: italic;
   color:   #f1948a ;
+  font-weight:bold;
 }
 
 #hola{
@@ -127,25 +113,25 @@ h2{
   background-color: #ffe292;
   padding: 2%;
   margin-bottom: 4%;
-
-
 }
 
-div{
+main div{
   text-align: center;
 }
 
+main p{
+  text-align: justify;
+  margin: 24px;
+  }
 h3{
   font-size: 50%;
   text-align: center;
-
 }
 
 p{
   font-size: 75%;
   text-align: center;
 }
-
 
 #fin__o{
   font-size: 75%;
@@ -154,23 +140,128 @@ p{
   background-color: #ffe292;
   padding: 2%;
   margin-bottom: 3%;
-
 }
 /*FOOTER*/
-
 #footer {
   width: auto;
-  height: 10%;
+  height: 12%;
+  background-color: #ffe292;
+}
+
+
+.text{
+  color: black;
+  font-weight: bold;
+justify-content: center;
+margin: 0px;
+
 
 }
-footer{
-height: 12vh;
-  background-color: #ffe292;
+.invisible{
+  display: none;
+}
+/*media queris*/
 
+@media  (min-width: 1000px) {
+
+section img{
+  width: 30%;
+  height: 30%;
+  align-items: center;
+}
+header{
+justify-content: center;
+
+}
+
+header nav{
+  width: 100%;
+  height: 30;
+justify-content: center;
+}
+
+header nav ul{
+display: inline;
+}
+
+.div__header{
+  width: 20%;
+  height: 80%;
+  }
+
+.list__container{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.logo__contenedor{
+  width: 100%;
+  height: 100%;
+}
+
+
+.item{
+  display: inline;
+  padding: 30px;
+
+}
+
+.item a{
+display: inline;
+padding: 30px;
+text-decoration: none;
+}
+
+/*MAIN*/
+
+.nombre{
+  height: 30%;
+  weight: 70%;
+  color:   #f1948a ;
+
+}
+
+#hola{
+display: none;
+}
+
+
+h2{
+    border: 3px solid;
+border-color: black;
+    background-color:  #f1c40f;
+  margin:1px;
+}
+
+
+main p{
+    font-size: 110%;
+  }
+#quienes{
+margin-top: 50px;
+}
+
+
+#fin__o{
+  font-size: 150%;
+  background-color:  #f1c40f;
+}
+
+.invisible{
+  display: block;
+}
+
+
+/*FOOTER*/
+
+footer{
+height: 18vh;
+  background-color: #ffe292;
 }
 
 footer p{
-  font-size: 130%;
+  font-size: 200%;
     display: flex;
   justify-content: center;
   }
@@ -179,41 +270,4 @@ footer p{
   color: black;
   font-weight: bold;
   font-size: 60%;
-}
-.invisible{
-  display: none;
-}
-
-@media  (min-width: 1000px) {
-
-section img{
-  width: 50%;
-  height: 50%;
-  display: inline-block;
-  align-items: center;
-}
-
-#hola{
-  font-size: 170%;
-  text-align: center;
-}
-
-h3{
-  font-size: 120%;
-  text-align: center;
-}
-
-section{
-  font-size: 160%;
-  text-align: center;
-}
-
-.nombre{
-  font-size: 175%;
-}
-
-.invisible{
-  display: block;
-}
-
 }
