--- a/Assets/css/estilos.css
+++ b/Assets/css/estilos.css
@@ -3,15 +3,21 @@
   box-sizing: border-box;
 }
 
+@@font-face {
+  font-family: "enyo";
+  src: url("enyo.otf") format("opentype");
+ }
 body{
+  /*style:"letter-spacing: 0.007em";*/
   margin: 0;
   padding: 0;
+  font-family: "enyo";
 }
 
 img {
   height: 80%;
   width: 80%;
-}
+  }
 
 /* HEADER */
 
@@ -27,6 +33,7 @@ header{
 a:hover{
   color: black;
   text-transform: full-width;
+  text-decoration: none;
   }
 
 
@@ -40,126 +47,151 @@ a:hover{
 header nav{
   width: 70%;
   height: auto;
-background-color: #ffe292;
-display: flex;
-flex-wrap: wrap;
-padding: 25px;
+  background-color: #ffe292;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 25px;
 }
 
 header nav ul{
   width: auto;
   height: 20%;
   display: flex;
-justify-content: center;
+  justify-content: center;
   padding: 0;
   flex-wrap: wrap;
   }
 
-.item{
-width: 100%;
-height: 100%;
-display: flex;
-color: black;
-flex-wrap: wrap;
-padding: 3px;
-}
+  .item {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      color: black;
+      flex-wrap: wrap;
+      padding: 3px;
+      list-style: none;
+
+  }
 
 .item a{
   width: 100%;
   height: 100%;
   display: flex;
-flex-wrap: wrap;
-text-decoration: none;
-color: black;
+  flex-wrap: wrap;
+  text-decoration: none;
+  color: black;
 }
-
-
 
 /*MAIN*/
-main{
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-background-color:  #eaecee;
-color: black;
-}
 
-#main {
-  width: auto;
-  height: 80%;
+main{
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   background-image: url(../imagenes/fondo3.jpg);
+   background-size: contain;
+   width: auto;
+   height: 70%;
 }
 
 main section{
-height: 30%;
-width: 70%;
+   height: 30%;
+   width: 70%;
+   text-align: center;
+   background-color:#ffe292d1;
 }
 
 .nombre{
   text-align: center;
   font-style: italic;
-  color:   #f1948a ;
+  background-color: #060606c2;
+  color: #ffe292;
   font-weight:bold;
-}
-
-#hola{
-  text-align: center;
-  width: 50%;
-  height: 50%;
 }
 
 h2{
   font-size: 100%;
   text-align: center;
-  background-color: #ffe292;
+  background-color:  #f1c40f;
   padding: 2%;
   margin-bottom: 4%;
-}
-
-main div{
-  text-align: center;
+  color: black;
+  border: 3px solid;
+  border-color: black;
 }
 
 main p{
-  text-align: justify;
-  margin: 24px;
-  }
+    text-align: justify;
+    margin: 24px;
+    font-weight: 600;
+    font-size: 100%;
+    text-align: justify;
+    color: black;
+
+    }
+
+}
 h3{
   font-size: 50%;
   text-align: center;
 }
 
-p{
-  font-size: 75%;
-  text-align: center;
-}
 
 #fin__o{
   font-size: 75%;
-  font-weight: bold;
   text-align: center;
-  background-color: #ffe292;
+  background-color: #f1c40f94;
   padding: 2%;
   margin-bottom: 3%;
 }
 /*FOOTER*/
 #footer {
   width: auto;
-  height: 12%;
+  height: 20%;
   background-color: #ffe292;
 }
 
+.guasa:hover,
+.insta:hover,
+.face:hover{
+    transform: scale(1.2);
+    transition: all 1.0s ease;
+    overflow: hidden;
+}
+
+.social-icons{
+display: flex;
+justify-content: center;
+}
+
+.guasa{
+  width: 5%;
+  height: 5%;
+  opacity: 0.7;
+}
+
+.insta{
+  width: 5%;
+  height: 5%;
+  opacity: 0.7;
+}
+
+.face{
+  width: 5%;
+  height: 5%;
+  opacity: 0.7;
+}
 
 .text{
+  font-size: 100%;
   color: black;
   font-weight: bold;
-justify-content: center;
-margin: 0px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
 
 
-}
-.invisible{
-  display: none;
-}
 /*media queris*/
 
 @media  (min-width: 1000px) {
@@ -170,18 +202,17 @@ section img{
   align-items: center;
 }
 header{
-justify-content: center;
-
+   justify-content: center;
 }
 
 header nav{
   width: 100%;
   height: 30;
-justify-content: center;
+  justify-content: center;
 }
 
 header nav ul{
-display: inline;
+   display: inline;
 }
 
 .div__header{
@@ -190,9 +221,9 @@ display: inline;
   }
 
 .list__container{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
 }
 
 .logo__contenedor{
@@ -200,74 +231,58 @@ display: inline;
   height: 100%;
 }
 
-
 .item{
   display: inline;
   padding: 30px;
-
 }
 
 .item a{
-display: inline;
-padding: 30px;
-text-decoration: none;
+   display: inline;
+   padding: 30px;
+   text-decoration: none;
 }
 
 /*MAIN*/
 
+.main{
+  height: 55%;
+  weight: auto;
+}
+
 .nombre{
   height: 30%;
   weight: 70%;
-  color:   #f1948a ;
-
 }
-
-#hola{
-display: none;
-}
-
 
 h2{
     border: 3px solid;
-border-color: black;
-    background-color:  #f1c40f;
-  margin:1px;
+    border-color: black;
+    margin:1px;
 }
-
 
 main p{
     font-size: 110%;
   }
-#quienes{
-margin-top: 50px;
-}
 
+#quienes{
+   margin-top: 50px;
+}
 
 #fin__o{
   font-size: 150%;
-  background-color:  #f1c40f;
-}
-
-.invisible{
-  display: block;
-}
+  }
 
 
 /*FOOTER*/
 
 footer{
-height: 18vh;
+  height: 15%;
   background-color: #ffe292;
 }
 
-footer p{
-  font-size: 200%;
-    display: flex;
-  justify-content: center;
-  }
 
 .text{
-  color: black;
-  font-weight: bold;
-  font-size: 60%;
+  font-size: 80%;
+}
+
 }
