--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,159 +3,218 @@
   <head>
     <meta charset="utf-8">
     <title>Mitologic, sueños hechos realidad</title>
-<link rel="stylesheet" href="../Assets/css/estilos.css">
-
-
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
-    </head>
+      <link rel="stylesheet" href="../Assets/css/estilos.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+ </head>
   <body>
 
 <!-- HEADER -->
 <header>
 <div class="div__header">
-
   <a class="logo__contenedor" href="#">
   <img src="..//Assets/imagenes/logo.png" alt="Logo">
-</a>
+  </a>
 </div>
-  <nav>
 
-<div class="list__container">
+<nav>
+  <div class="list__container">
     <ul>
-            <li class="item"><a href="#ofrece"> Servicios</a></li>
-            <li class="item"><a href="#fin__o"> Catálogo</a></li>
+      <li class="item"><a href="#ofrece"> Servicios</a></li>
+      <li class="item"><a href="#fin__o"> Catálogo</a></li>
       <li class="item"><a href="#expe"> Experiencias</a></li>
-      <li class="item"><a href="#contacto">Contacto</a></li>
+      <li class="item"><a href="https://www.instagram.com" target="_blank">Contacto</a></li>
     </ul>
-  </nav>
-</div>
+ </div>
+</nav>
 
-
-  </header>
+</header>
       <!-- MAIN -->
-      <main id="main">
 
-        <section id="hola">
-<img src="..//Assets/imagenes/banner.jpg" alt="">
-        </section>
+<main id="main">
 
-
-        <section>
-<h2 class="titulo" id="quienes">¿Quiénes somos? </h2>
-
-  <p>Somos un grupo anónimo de personas que ofrece la realización de los sueños de varias personas.
-    Estamos a lo largo de varias ciudades imporantes del mundo. Pero decidimos atender en San Salvador
-    de Jujuy donde encontramos los diversos climas necesarios para conservar nuestros productos.</p>
-        </section>
 
 <section>
-<h2 class="titulo" id="ofrece">Servicios</h2>
-  <p>Nos dedicamos a cumplir sueños. Para niños, niñas, adolescentes y adultos ofrecemos la fantasía hecha realidad.
+      <h2 class="titulo" id="quienes">¿Quiénes somos? </h2>
+        <p class="lh-base">Somos un grupo anónimo de personas que ofrece la realización de los sueños de varias personas.
+       Estamos a lo largo de varias ciudades imporantes del mundo. Pero decidimos atender en San Salvador
+       de Jujuy donde encontramos los diversos climas necesarios para conservar nuestros productos.</p>
+</section>
+
+<section>
+    <h2 class="titulo" id="ofrece">Servicios</h2>
+    <p class="lh-base">Nos dedicamos a cumplir sueños. Para niños, niñas, adolescentes y adultos ofrecemos la fantasía hecha realidad.
     Con un gran catálogo de animales mitólogicos que pueden llevarse a vivir a su jardín,
     campo o donde deseen. <br> <br></p>
 </section>
 
 <section>
-  <h2 id="fin__o"> Catálogo </h2>
+    <h2 id="fin__o"> Catálogo </h2>
+
+
+<!-- PRUEBA DE TARJETA-->
+
+<!-- TARETA HORIZONTAL
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+        <div class="col-md-8">
+                <img src="..//Assets/imagenes/dragon.jpeg" class="img-fluid rounded-start" alt="...">
+        </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Dragón</h5>
+        <p class="card-text">  <p>Son reptiles alados y los seres mitológicos más poderosos que existen o de los que se haya hablado
+          jamás. Están presentes en las leyendas de Asia, Europa, América y Oceanía, y unas de sus principales características es que escupen fuego y pueden volar.
+          Son grandes compañeros de paseos de días enteros. <br>
+          Recomendado para personas que viven en zonas rurales. </p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+
+    <div class="col-md-8">
+            <img src="..//Assets/imagenes/cerbero.jpeg" class="img-fluid rounded-start" alt="...">
+    </div>
+  <div class="col-md-8">
+  <div class="card-body">
+    <h5 class="card-title">Cerbero</h5>
+    <p class="card-text">  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  </div>
+  </div>
+
+
+  </div>
+</div>
+-->
+
+<!-- TARETA superpuesta
+
+<div class="card bg-dark text-white">
+  <img src="..//Assets/imagenes/dragon.jpeg" class="card-img" alt="...">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text">Last updated 3 mins ago</p>
+  </div>
+</div>
+-->
+
+<!-- TARETA OTRA
+<div class="card" style="width: 18rem;">
+  <img src="..//Assets/imagenes/fauno.jpeg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+-->
+
+
+  <div>
+    <h3 class="nombre">Dragón</h3>
+    <img src="..//Assets/imagenes/dragon.jpeg" alt="">
+    <p class="lh-base">Son reptiles alados y los seres mitológicos más poderosos que existen o de los que se haya hablado
+    jamás. Están presentes en las leyendas de Asia, Europa, América y Oceanía, y unas de sus principales características es que escupen fuego y pueden volar.
+    Son grandes compañeros de paseos de días enteros.</p>
+    <p class="font-monospace"> Recomendado para personas que viven en zonas rurales. </p>
+
+  </div>
+
     <div>
-<h3 class="nombre">Dragón</h3>
-          <img src="..//Assets/imagenes/dragon.jpeg" alt="">
-          <p>Son reptiles alados y los seres mitológicos más poderosos que existen o de los que se haya hablado
-            jamás. Están presentes en las leyendas de Asia, Europa, América y Oceanía, y unas de sus principales características es que escupen fuego y pueden volar.
-Son grandes compañeros de paseos de días enteros. <br>
-Recomendado para personas que viven en zonas rurales.</p>
+         <h3 class="nombre">Fauno</h3>
+         <img src="..//Assets/imagenes/fauno.jpeg" alt="">
+         <p>El Fauno es personificado como un hombre con largos cuernos, sus piernas son de cabra y en vez de tener pies,
+         posee pesuñas. <br>En la mitología romana se encontraba en los bosques y campos, su cometido en la tierra era
+        proteger a los rebaños de ataques con su fuerza causados por alimañas o campesinos. Además, podía revelar el
+        futuro a través de sueños o voces que le hablaban.<br>
+         Recomendado para personas que gustan de largas charlas y la adivinación.</p>
     </div>
 
-<div >
-<h3 class="nombre">Fauno</h3>
-    <img src="..//Assets/imagenes/fauno.jpeg" alt="">
-    <p>El Fauno es personificado como un hombre con largos cuernos, sus piernas son de cabra y en vez de tener pies,
-      posee pesuñas. <br>En la mitología romana se encontraba en los bosques y campos, su cometido en la tierra era
-      proteger a los rebaños de ataques con su fuerza causados por alimañas o campesinos. Además, podía revelar el
-      futuro a través de sueños o voces que le hablaban.<br>
-
-Recomendado para personas que gustan de largas charlas y la adivinación.</p>
-
-</div>
-
-    <div >
-<h3 class="nombre">Basilisco</h3>
-  <img src="..//Assets/imagenes/basilico.jpg" alt="">
-  <p>Basilisco
-El basilisco común, es un animal mitológico híbrido, cuya apariencia es más similar a la de un gallo, un reptil y murciélago.
-Su vida empieza cuando rompe un huevo con forma redonda, abandonado por una gallina en principio e incubado por un
-reptil más tarde.
-Es un animal con un poder bastante parecido al de medusa, ya que es capaz de convertir en piedra todo lo que toca,
-por lo que escasea de enemigos directos. <br>
-
-Recomendado para gente que tiene enemigos o no le gusta la compañia. No dejar este animal con acceso a la vía
-pública.</p>
-
+    <div>
+         <h3 class="nombre">Basilisco</h3>
+         <img src="..//Assets/imagenes/basilico.jpg" alt="">
+        <p>Basilisco
+         El basilisco común, es un animal mitológico híbrido, cuya apariencia es más similar a la de un gallo, un reptil y murciélago.
+         Su vida empieza cuando rompe un huevo con forma redonda, abandonado por una gallina en principio e incubado por un
+         reptil más tarde.
+         Es un animal con un poder bastante parecido al de medusa, ya que es capaz de convertir en piedra todo lo que toca,
+         por lo que escasea de enemigos directos. <br>
+         Recomendado para gente que tiene enemigos o no le gusta la compañia. No dejar este animal con acceso a la vía
+         pública.</p>
     </div>
-<div >
-<h3 class="nombre">Cerbero</h3>
-    <img src="..//Assets/imagenes/cerbero.jpeg" alt="">
-    <p>
-Cerbero era el perro guardián de Hades, el Dios del inframundo, que resguardaba el lugar, estando en las afueras
-de la puerta del reino de los muertos para evitar la salida de los mismos y la entrada de los vivos.
 
-Todo aquel que estuviera cerca a esta puerta se toparía con un gran monstruo con forma de perro de tres cabezas
- y con una larga serpiente de cola. <br>
-
-Recomendado para quien gusta de compañias profundas y transformadoras.</p>
-</div>
-
-
+   <div>
+         <h3 class="nombre">Cerbero</h3>
+         <img src="..//Assets/imagenes/cerbero.jpeg" alt="">
+         <p> Cerbero era el perro guardián de Hades, el Dios del inframundo, que resguardaba el lugar, estando en las afueras
+         de la puerta del reino de los muertos para evitar la salida de los mismos y la entrada de los vivos.
+         Todo aquel que estuviera cerca a esta puerta se toparía con un gran monstruo con forma de perro de tres cabezas
+         y con una larga serpiente de cola. <br>
+         Recomendado para quien gusta de compañias profundas y transformadoras.</p>
+   </div>
 </section>
 
 
 <section>
-<h2 class="titulo" id="expe">Experiencias</h2>
-  <p>"Vivir con un Pegaso me permitió conocer lugares impensados lejos de este mundo. Gracias Mitologic
-    por dejarme vivir esta experiencia única." <br>
-Mabel 41 años de Coro, Venezuela <br> <br>
+         <h2 class="titulo" id="expe">Experiencias</h2>
+         <p>"Vivir con un Pegaso me permitió conocer lugares impensados lejos de este mundo. Gracias Mitologic
+         por dejarme vivir esta experiencia única." <br>
+         Mabel 41 años de Coro, Venezuela <br> <br>
+         "Yo pensaba que traerme un basilisco a mi jardín me iba a proteger de los enemigos típicos de un jardín.
+         Pero no sólo hizo eso, si no que me salvó más de una vez de ladrones" <br>
+         Sergio 64 años de Salta, Argentina <br> <br>
+         "Yo vivía una vida muy gris antes de compartir la vida con un Fauno, lo supe apenas lo conocí."<br>
+        Samantha 58 años de Puerto Varas, Chile. <br><br>
+        </p>
+</section>
 
-"Yo pensaba que traerme un basilisco a mi jardín me iba a proteger de los enemigos típicos de un jardín.
-Pero no sólo hizo eso, si no que me salvó más de una vez de ladrones" <br>
-Sergio 64 años de Salta, Argentina <br> <br>
+  <!-- Contacto Borrado
 
-"Yo vivía una vida muy gris antes de compartir la vida con un Fauno, lo supe apenas lo conocí."<br>
-Samantha 58 años de Puerto Varas, Chile. <br><br>
-</p>
+<section>
+         <h2 class="titulo" id="contacto">Contacto</h2>
+         <p>Recibimos consulta únicamente por correo mitologicrealidad@mitologic.com <br>
+         El catálogo de animales mitológicos se actualiza constantemente, pueden suscribirse a un mailing mensual de
+         novedades, enviando un correo con asunto "Quiero Más".<br>
+         San Salvador de Jujuy, Argentina.</p>
 </section>
 
 <section>
-  <h2 class="titulo" id="contacto">Contacto</h2>
-    <p>Recibimos consulta únicamente por correo mitologicrealidad@mitologic.com <br>
-El catálogo de animales mitológicos se actualiza constantemente, pueden suscribirse a un mailing mensual de
-novedades, enviando un correo con asunto "Quiero Más".<br>
-San Salvador de Jujuy, Argentina.</p>
-
+         <p class="invisible">Puden consultar el catálogo del 2020 <a href="../Assets/imagenes/catalogo.pdf" target="_blank">aquí</a> </p>
 </section>
-
-<section>
-  <p class="invisible">Puden consultar el catálogo del 2020 <a href="../Assets/imagenes/catalogo.pdf" target="_blank">aquí</a> </p>
-</section>
-      </main>
+-->
+</main>
 
       <!-- FOOTER -->
 
+<footer id="footer">
+         <p class="text">Aqui los derechos son sólo de mitologic</p>
 
-      <footer id="footer">
-<p class="text">Aqui los derechos son sólo de mitologic</p>
-      </footer>
+   <div class="social-icons">
+         <div class="guasa">
+         <a href="https://wa.me/5491150158457/?text=mensaje" target="_blank">
+         <img src="..//Assets/logos/logoguasap.jpg" width="50" height="50">
+         </a>
+  </div>
+
+   <div class="insta">
+         <a href="https://www.instagram.com/" target="_blank">
+         <img src="..//Assets/logos/logoinsta.jpg" alt="pagina">
+         </a>
+   </div>
+
+   <div class="face">
+          <a href="https://www.facebook.com" target="_blank">
+          <img src="..//Assets/logos/logoface.jpg" alt="pagina">
+          </a>
+   </div>
+
+</div>
+</footer>
 
 
 
 
 
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
-
-          <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 
           </body>
